fix a relative layout bug

--- a/demo/basic/index.scss
+++ b/demo/basic/index.scss
@@ -21,12 +21,7 @@ $COLOR: #aaa;
 	}
 }
 
-.linear {
-	position: absolute !important;
-}
-
 .box {
-	position: absolute !important;
 	h1 {
 		position: absolute;
 		top: 0;
